--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Kong的博客
 subtitle: 长夜漫漫，船停港湾
-description: 广大16级，就职于广州某厂。 
+description: 广大16级，就职于广州某小厂。 
 author: Kong
 email: kalikong2056@gmail.com
 keywords: ""
