--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -106,7 +106,7 @@ smart_menu:
   aboutme: '关于我'
 
 friends:
-  海川机器人: http://gzhcrobot.com/
+  智汇·海川: https://gzhcrobot.com/
   
 
-aboutme: Kong<br>毕业于广大，就职于广州某厂<br><br>左手情诗，右手码字，<br>目前是工业互联网开发一人<br><br>享受生活，热爱姑娘。
+aboutme: Kong<br>毕业于广大，就职于广州某小厂<br><br>左手情诗，右手码字，<br>目前是工业互联网开发一人<br><br>享受生活，热爱姑娘。
