--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -80,6 +80,7 @@ gitalk:
   ClientSecret:  '332f6b9e5d6bbcae04a788e9b3fa3bb38e376d8b'
   adminUser:  'manchungkali' 
   distractionFreeMode: true
+  id: 'loction.pathname'
 
 #4、Disqus 在hexo根目录的config里也有disqus_shortname字段，优先使用yilia的
 disqus: false
