--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Kong的博客
+title: 康松的认知庭院
 subtitle: 长夜漫漫，船停港湾
-description: 广大16级，就职于广州某小厂。 
-author: Kong
+description: 广大19届，任职于广州机器人小厂。
+author: Alan Kong
 email: kalikong2056@gmail.com
 keywords: ""
 # URL
